--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -23,6 +23,8 @@ jobs:
             - uses: actions/checkout@v2
             - name: Set up Node
               uses: actions/setup-node@v1
+            - name: Install Angular CLI
+              run: npm install -g @angular/cli --latest
             - name: Build production
               run: npx ng build
             - name: Deploy to S3
