--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -23,10 +23,11 @@ jobs:
             - uses: actions/checkout@v2
             - name: Set up Node
               uses: actions/setup-node@v1
+              run: npm install
             - name: Install Angular CLI
               run: npm install -g @angular/cli --latest
             - name: Build production
-              run: npx ng build
+              run: ng build
             - name: Deploy to S3
               uses: jakejarvis/s3-sync-action@master
               with:
