--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -23,6 +23,7 @@ jobs:
             - uses: actions/checkout@v2
             - name: Set up Node
               uses: actions/setup-node@v1
+            - name: Install dependencies
               run: npm install
             - name: Install Angular CLI
               run: npm install -g @angular/cli --latest
