--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: s3 upload
+name: Deploy app to s3
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -38,7 +38,7 @@ jobs:
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
                   AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
-                  SOURCE_DIR: 'public'      # optional: defaults to entire repository
+                  SOURCE_DIR: 'dist'      # optional: defaults to entire repository
 
             # Runs a single command using the runners shell - don't judge I'm learning
             - name: Run a one-line script
