--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -38,7 +38,7 @@ jobs:
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
                   AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
-                  SOURCE_DIR: 'dist'      # optional: defaults to entire repository
+                  SOURCE_DIR: 'dist/gemini-poc'      # optional: defaults to entire repository
 
             # Runs a single command using the runners shell - don't judge I'm learning
             - name: Run a one-line script
