--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -1,9 +1,5 @@
-# This is a basic workflow to help you get started with Actions
+name: Deploy App to s3
 
-name: Deploy app to s3
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
     push:
         branches: [ development ]
@@ -29,6 +25,9 @@ jobs:
               run: npm install -g @angular/cli --latest
             - name: Build production
               run: ng build
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
             - name: Deploy to S3
               uses: jakejarvis/s3-sync-action@master
               with:
@@ -37,15 +36,4 @@ jobs:
                   AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
-                  AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
                   SOURCE_DIR: 'dist/gemini-poc'      # optional: defaults to entire repository
-
-            # Runs a single command using the runners shell - don't judge I'm learning
-            - name: Run a one-line script
-              run: echo Hello from Project Gemini!
-
-            # Runs a set of commands using the runners shell
-            - name: Run a multi-line script
-              run: |
-                  echo Add other actions to build,
-                  echo test, and deploy your project.
